# lebanon-economic-monitor

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.html  README.md  environment.yml  genindex.html  movement-range-R.ipynb  objects.inv  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: project_setup.yaml
.virtual_documents/notebooks/conflict/: acled.ipynb
.virtual_documents/notebooks/foundational-data/: population.ipynb
_sources/: README.md
_sources/docs/: foundational_datasets_and_data_products.md  team.md
_sources/notebooks/air-pollution/: README.md  air-pollution.ipynb
_sources/notebooks/ais-analysis/: README.md
_sources/notebooks/aviation-trends/: aviation.ipynb  aviation_update.ipynb
_sources/notebooks/conflict/: acled.ipynb  conflict.ipynb
_sources/notebooks/crop-growing-status/: README.md
_sources/notebooks/ntl-analysis/: README.md
_sources/notebooks/population/: refugee-estimates.ipynb
docs/: 1-intro-to-data-lab.html  _config.yml  _toc.yml  bibliography.bib  foundational_datasets_and_data_products.html  foundational_datasets_and_data_products.md  introduction_to_data_goods.html  requirements.txt  team.html  team.md
docs/extra_html/: 404.html
notebooks/: bibliography.html  nasa-apod.html  world-bank-api.html  world-bank-package.html
notebooks/air-pollution/: README.html  README.md  air-pollution.html  air-pollution.ipynb  emissions.ipynb
notebooks/ais-analysis/: 01-lebanon.ipynb  02-lebanon.ipynb  04-lebanon.ipynb  README.html  README.md
notebooks/aviation-trends/: aviation.html  aviation.ipynb  aviation_update.html  aviation_update.ipynb
notebooks/conflict/: acled.html  acled.ipynb  conflict.html  conflict.ipynb
notebooks/crop-growing-status/: README.html  README.md
notebooks/demographics/: population.html
notebooks/foundational-data/: population.html  population.ipynb
notebooks/movement/: movement-range.html  movement-range.ipynb
notebooks/ntl-analysis/: README.html  README.md  _ntl_main.R  nighttime_lights_v2.qmd  ntl-analysis.html  ntl-analysis.ipynb
notebooks/ntl-analysis/01_clean_data/: 01_download_blackmarble.R  02_extract_to_polygons.R
notebooks/ntl-analysis/01_clean_data/_archive/: 01_clean_gasflaring_data.R
notebooks/ntl-analysis/02_analysis/: annual_trends.R  compare_viirs_sources.R  map_ntl_annual.R  map_ntl_annual_2022.R  map_ntl_dmsp_10_11_12.R  map_ntl_dmsp_10_11_12_pc.R  monthly_trends.R  percent_change_adm.R  pixel_map_change.R  pixel_percent_change.R  viirs_dmsp.R
notebooks/population/: README.html  README.md  population.html  population.ipynb  refugee-estimates.html
src/acled_country_analysis/: analysis.py  visuals.py
src/lebanon-economic-monitor/: __init__.py
src/lebanon_economic_monitor/acled_country_analysis/: analysis.py  visuals.py
